kube/apps/homeassistant/mosquitto/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mosquitto-gateway
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-acme-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: mqtts
      protocol: TCP
      port: 8883
      hostname: "mosquitto.kube.metalnet.org"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: mosquitto-kube-metalnet-org-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: mosquitto-tcp-route
  namespace: homeassistant
spec:
  parentRefs:
    - name: mosquitto-gateway
      namespace: homeassistant
      sectionName: mqtts
  rules:
    - backendRefs:
        - name: mosquitto
          port: 1883
          kind: Service
          group: ""
          weight: 1
